--- a/blog/templates/blogpage.html
+++ b/blog/templates/blogpage.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
 
+{% block content %}
 <div class="blog-container">
     <h1 class="blog-title">POSTS</h1>
     
